<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/base_view"
    >

    <Button
        android:id="@+id/main_activity_increment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:text="@string/buy"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_hold_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choice" />

    <Button
        android:id="@+id/main_activity_decrement_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E91E1E"
        android:text="@string/sell"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_hold_button" />

    <TextView
        android:id="@+id/cash_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_cash"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/choice"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cash_label" />

    <TextView
        android:id="@+id/gamestop_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_gme"
        android:textColor="#40E440"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cash_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamestop_label" />

    <TextView
        android:id="@+id/choice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/choice_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_increment_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cash_counter" />

    <TextView
        android:id="@+id/gamestop_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gamestop_owned"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/gamestop_counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cash_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cash"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/cash_counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamestop_counter" />

    <Button
        android:id="@+id/main_activity_hold_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ACACAC"
        android:text="@string/hold"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_decrement_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_increment_button" />

    <TextView
        android:id="@+id/gamestop_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="GameStop Price"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/gamestop_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>